[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "cffi>=1.17",
    "jinja2",
    "inflection",
    "xmltodict",
]
build-backend = "setuptools.build_meta"

[project]
name = "vulkan"
version = "1.4.321.0"
description = "Ultimate Python binding for Vulkan API"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "Apache-2.0" }
authors = [{ name = "realitix", email = "realitix@gmail.com" }]
urls = { Homepage = "https://github.com/realitix/vulkan" }

keywords = ["Graphics", "3D", "Vulkan", "cffi"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Android",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Natural Language :: English",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "cffi>=1.10",
]

[project.optional-dependencies]
example = [
    "pysdl2",
    "pysdl2-dll",
]

[tool.setuptools]
packages = ["vulkan"]